<resources>
    <string name="app_name">FSP Manager</string>
    <string name="jury_menu_name">Welcome </string>
    <string name="membreESEO">ESEO Member</string>
    <string name="buttonVisitor">Visitor</string>
    <string name="iAm">Who am I?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome ! "</string>
    <string name="wrong_password">"Wrong Password or Login ! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must not be empty</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">"Login"</string>
    <string name="title_activity_jury_member">JuryMemberActivity</string>
    <string name="tab_text_1">FSP</string>
    <string name="tab_text_2">Juries</string>
    <string name="tab_text_3">Grades</string>
    <string name="tab_text_4">Create Juries</string>
    <string name="buttonAllPfe">See all FSP</string>
    <string name="buttonPfeJury">See FSP which i am a member of</string>
    <string name="title_activity_com_member">ComMemberActivity</string>
    <string name="AllPfeActivity">All FSP</string>
    <string name="MyPfeActivity">My FSP</string>
    <string name="emplacement">Place : </string>
    <string name="confidential">This subject is confidential.</string>
    <string name="title_activity_pfe_details">Details</string>
    <string name="MyJuryProjectActivity">Projects which I am Jury member or supervisor</string>
    <string name="NoPlaceDefined">No Place Defined</string>
    <string name="MyGrade">My Grade :</string>
    <string name="NotGraded">Not graded yet</string>
    <string name="AverageGrade">Average Grade :</string>
    <string name="Members">Members :</string>
    <string name="Supervisor">Supervisor :</string>
    <string name="FullScreen">Full Screen</string>
    <string name="Team">Team :</string>
    <string name="NoPoster">No poster for this project</string>
    <string name="Tutor">Supervisor :</string>
    <string name="NoTeam">No team for this project</string>
    <string name="NoSupervisor">No supervisor for this project</string>
    <string name="JuryProjectSuccess">Projects associated to jury</string>
    <string name="AddSubject">Add this subject for open days</string>
    <string name="SubjectAlreadyAdded">Subject already added for open days</string>
    <string name="GradePosterVisitor">Grade the poster</string>
    <string name="Poster">Preview of the poster</string>
    <string name="NoPreview">No preview of the poster for this project</string>
    <string name="Comment">Annotation: </string>
    <string name="Grade">Grade </string>
    <string name="GradeSaved">Grade saved successfully </string>
    <string name="LongPress">Long Press to See the Grades</string>
    <string name="GradeStudent">Grade the student</string>
    <string name="OldGrade">Old Grade :</string>
    <string name="NewGrade">New Grade :</string>
    <string name="OldComment">Old Annotation :</string>
    <string name="NewComment">New Annotation :</string>
    <string name="UpdateGrade">Update Grade</string>
    <string name="AddComment">Add Comment</string>
    <string name="UpdateComment">Update Comment</string>
    <string name="CommentPoster">Annotate the poster</string>
    <string name="NoComment">No comment done by the jury</string>
    <string name="CommentSaved">Annotation saved successfully</string>
    <string name="GiveGrade">Give individual Grade</string>
    <string name="TruncateTable">Drop data</string>
    <string name="SubjectLoaded">Random subjects loaded</string>
    <string name="NoJuries">No Juries Assigned</string>
    <string name="NoGrades">You do not belong to any jury</string>
    <string name="CreateJuryManual">Create pseudoJury manually</string>
    <string name="CreateJuryAuto">Create pseudoJury automatically</string>
    <string name="NoPseudoJury">No pseudoJury created. Access denied!</string>
    <string name="SubjectAdded">Subject added for open days</string>
    <string name="NoSubjectLoaded">Subjects not uploaded yet. Please wait!</string>
    <string name="TableEmptied">The tables have been emptied successfully</string>
    <string name="NoProjectsSelected">Please select at least one subject</string>
    <string name="GradeVisitor">Grade</string>

    <string name="posterlocation">Poster Location</string>
    <string name="grade_prompt">Choose a grade</string>

    <string-array name="grade_arrays">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

</resources>
